# plistsync

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANEGLOG.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: integration_tests.yml  mypy_notebooks.sh  python.yml  release.yml  update_secret.py
config/: tidal_token.json
docs/: .readthedocs.yaml  Makefile  conf.py  contribution.md  getting-started.md  index.md
docs/_static/: icon_ven.afdesign
docs/_static/css/: custom.css
docs/_static/v2/: ios_squircle.afdesign
docs/_templates/autoapi/python/: module.rst
docs/_templates/autodoc/: members.rst
docs/config/: config.yml
docs/details/: configuration.md  core-concepts.md  matching.md
docs/details/advanced/: index.md  logging.md  matching.md
docs/dev/: debug.md
docs/services/: cli.py  plex.ipynb  spotify.ipynb  spotify.md  tidal.ipynb  tidal.md
docs/services/local/: getting-started.md  index.md
docs/services/plex/: collections.ipynb  getting-started.md  index.md
docs/services/spotify/: collections.ipynb  getting-started.md  index.md
docs/services/tidal/: collections.ipynb  getting-started.md  index.md  tracks.ipynb
docs/services/traktor/: collections.ipynb  getting-started.md  index.md
examples/: collect_files_for_m3u.py  exploration.ipynb  plex_playlists_to_m3u.py  plex_playlists_to_traktor.py  plex_traktor_bidirectional.py  readme.md  sync_spotify_tidal.ipynb  traktor_to_mp3.ipynb  transcode_playlist.ipynb
examples/community/: migrate.py  plex_to_m3u.py  plex_traktor_bidirectional.py
examples/old/: plex_playlists_to_m3u.py  plex_playlists_to_traktor.py  plex_traktor_bidirectional.py
notebooks/: spotify.ipynb  tidal.ipynb  top100dnb.ipynb  traktor.ipynb
plistsync/: __init__.py  __main__.py  config.py  errors.py  logger.py  utils.py
plistsync/cli/: plex.py  redis.py
plistsync/config/: __init__.py  yaml.py
plistsync/core/: __init__.py  collection.py  diff.py  matching.py  playlist.py  rewrite.py  track.py  translator.py
plistsync/services/: __init__.py
plistsync/services/beets/: __init__.py  collection.py  database.py  track.py
plistsync/services/local/: __init__.py  collection.py  track.py
plistsync/services/plex/: __init__.py  api.py  api_types.py  authenticate.py  collection.py  library.py  playlist.py  track.py
plistsync/services/spotify/: __init__.py  api.py  api_types.py  authenticate.py  collection.py  library.py  playlist.py  token.py  track.py
plistsync/services/tidal/: __init__.py  api.py  api_types.py  authenticate.py  collection.py  library.py  playlist.py  token.py  track.py
plistsync/services/traktor/: __init__.py  collection.py  library.py  path.py  playlist.py  track.py  utility.py
plistsync/utils/: __init__.py  bearer_token.py
plistsync/utils/auth/: __init__.py  bearer_token.py  redirect.py
tests/: abc.py  conftest.py  test_cli.py  test_config.py  test_logger.py
tests/abc/: collection.py  playlist.py  tracks.py
tests/bench_readtags/: README.md  test_id3_readers.py
tests/core/: mock_collections.py  mock_playlist.py  mock_track.py  test_collection.py  test_diff.py  test_matching.py  test_playlists.py  test_rewrite.py  test_track.py
tests/data/: Readme.md  traktor_playlist.nml
tests/data/audio/: test.flac
tests/services/: README.md  test_beets.py  test_local.py  test_spotify.py  test_traktor.py
tests/services/beets/: _common.py  conftest.py  test_search.py  test_track.py
tests/services/local/: test_collection.py  test_track.py
tests/services/plex/: conftest.py  test_collection.py  test_playlist.py  test_track.py
tests/services/spotify/: test_extract_id.py  test_playlist.py
tests/services/tidal/: test_playlist.py
tests/services/traktor/: conftest.py  test_collection.py  test_playlist.py  test_track.py  test_trakorpath.py
tests/test_beets/: test_search.py
tests/test_collections/: test_local.py
tests/test_config/: test_yaml.py
tests/test_services/: test_beets.py  test_local.py  test_plex.py  test_traktor.py
