[project]
name = "plistsync"
version = "0.3.0"
requires-python = ">=3.11"
dependencies = [
    "eyconf[cli]>=0.5.2",
    "requests>=2.32.5",
    "levenshtein>=0.27.3",
    "typer>=0.21.1",
]

[project.optional-dependencies]
# Service specific dependencies
traktor = ["lxml>=6.0.2"]
spotify = ["requests_oauth2client>=1.8.0"]
tidal = ["requests_oauth2client>=1.8.0"]
local = ["tinytag>=2.2.0"]
beets = ["sqlalchemy>=2.0.45"]
plex = ["nest-asyncio>=1.6.0", "plistsync[local]"]

[dependency-groups]
# Dev dependencies
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "typed" },
    "pre-commit>=4.5.1",
]

lint = ["ruff>=0.14.11", "nbstripout>=0.9.1"]
test = [
    "beets>=2.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
]
docs = [
    "furo>=2025.12.19",
    "myst-nb>=1.3.0",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.1",
    "sphinx-design>=0.6.1",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-typer[html]>=0.7.2",
    "sphinxcontrib-mermaid>=2.0.0",
]
typed = [
    "mypy>=1.19.1",
    "types-lxml>=2026.1.1",
    "types-requests>=2.32.4.20260107",
    "types-tqdm>=4.67.0.20250809",
    # FIXME: maybe we can remove this somehow as this is needed to full
    # run mypy on the src (optional dependencies need types)
    "requests_oauth2client>=1.8.0",
    "tinytag>=2.2.0",
]

[project.scripts]
plistsync = "plistsync.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["plistsync"]

[tool.ruff]
include = [
    "pyproject.toml",
    "plistsync/**/*.py",
    "tests/**/*.py",
    "docs/**/*.ipynb",
]
extend-include = ["*.ipynb"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "PTH", # Use pathlib instead of os.path
    "D",   # pydocstyle
    "W",   # pycodestyle
]
ignore = [
    # Ignore req. for public facing functions docstrings
    #"F401",
    "D10",
    "D202",
    "PTH123", # Do not require Path.open
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "D",
    "I",
    "S",
    "W",
    "E501", # long lines
]
"**__main__.py" = ["D103"]

# TODO: Reevaluate if we can remove benchmarks
"**/tests/bench_readtags**" = ["ALL"]

# ignore import order in init files
# to allow dependency error handling
"**/__init__.py" = ["E402"]

# Less strict for notebooks
"**/*.ipynb" = ["E", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--cov=."]
filterwarnings = ["error", "ignore::DeprecationWarning"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.report]
omit = ["*/tests/*"]
exclude_lines = ["if TYPE_CHECKING"]
exclude_also = ["raise NotImplementedError", "@(abc\\.)?abstractmethod"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_decorators = true
allow_redefinition = true
# We should enable these at some point
# disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["nest_asyncio.*"]
ignore_missing_imports = true
